Regression. Geometry nodes, viewer node shows nothing to spreadsheet when there is no value input #94322

Closed
opened 2021-12-22 12:33:20 +01:00 by Vyacheslav Kobozev · 11 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-21 20:32, hash: d2bf60cc17
Worked: 3.0.0, f1cca30557, 2021-12-02 18:35

Caused by 7e712b2d6a

Short description of error
Open the file
viewer node.blend
press {key Ctrl Shift Click} on group input, look at Spreadsheet
In 3.1 you will see empty data. 3.0 works properly

2021-12-22_14-28-42.mp4

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-21 20:32, hash: `d2bf60cc17` Worked: 3.0.0, f1cca3055776, 2021-12-02 18:35 Caused by 7e712b2d6a **Short description of error** Open the file [viewer node.blend](https://archive.blender.org/developer/F12771694/viewer_node.blend) press {key Ctrl Shift Click} on group input, look at Spreadsheet In 3.1 you will see empty data. 3.0 works properly [2021-12-22_14-28-42.mp4](https://archive.blender.org/developer/F12771695/2021-12-22_14-28-42.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscribers: @JacquesLucke, @lichtwerk

Added subscribers: @JacquesLucke, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Caused by 7e712b2d6a

CC @JacquesLucke , since it was expected that some updates go missing from that commit I was hesitating setting this to High prio, but is a recent regression, so I did anyways, feel free to lower prio here,

Caused by 7e712b2d6a CC @JacquesLucke , since it was expected that some updates go missing from that commit I was hesitating setting this to High prio, but is a recent regression, so I did anyways, feel free to lower prio here,

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Interesting. If you save and open the file it works. Or if you create a a new node (or probably any other thing that may force some update somewhere).

Interesting. If you save and open the file it works. Or if you create a a new node (or probably any other thing that may force some update somewhere).

In fact the quickest workaround to get this working is to mute and unmute the newly created Viewer Node.

In fact the quickest workaround to get this working is to mute and unmute the newly created Viewer Node.

In #94322#1278003, @dfelinto wrote:
In fact the quickest workaround to get this working is to mute and unmute the newly created Viewer Node.

do not work for me

> In #94322#1278003, @dfelinto wrote: > In fact the quickest workaround to get this working is to mute and unmute the newly created Viewer Node. do not work for me

This issue was referenced by dd01ce2cd0

This issue was referenced by dd01ce2cd079e4a772bbb192022cd5a972c7503e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-12-24 13:40:11 +01:00

Looks like it was the issue, not only with viewer node, but with muting nodes too.
Now fixed and works well

Looks like it was the issue, not only with viewer node, but with muting nodes too. Now fixed and works well
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:53:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94322
No description provided.