Fix T94322: add missing updates after recent refactor

This was a regression in rB7e712b2d6a0d257d272ed35622b41d06274af8df.