source/blender/editors/space_node/node_add.cc
@@ -85,7 +85,7 @@ bNode *node_add_node(const bContext &C, const char *idname, int type, float locx
   nodeSetSelected(node, true);
 
   ED_node_set_active(&bmain, &snode, snode.edittree, node, nullptr);
-  BKE_ntree_update_main_tree(&bmain, snode.edittree, nullptr);
+  ED_node_tree_propagate_change(&C, &bmain, snode.edittree);
   return node;
 }
 
